--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 	<script type="text/javascript" src="./js/web3.min.js"></script>
 	<script type="text/javascript" src="./js/main.js"></script>
 	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
-	<link href="./css/styles.css" rel="stylesheet">
+	<link href="./css/styles.min.css" rel="stylesheet">
 </head>
 <body class="bg-primary">
 	<header class="masthead bg-primary text-white text-center">
