Added favicon and added betting functionality

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 	integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
 	crossorigin="anonymous"></script>
 	<script type="text/javascript" src="./js/web3.min.js"></script>
+	<script type="text/javascript" src="./js/abi.js"></script>
 	<script type="text/javascript" src="./js/main.js"></script>
 	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
 	<link href="./css/styles.min.css" rel="stylesheet">
@@ -38,7 +39,7 @@
 					<input type="text" class="form-control form-control-lg" id="name_input" placeholder="Place your bet " style="text-align: center;">
 					<div class="input-group-append">
 						<span class="input-group-text" id="inputGroup-sizing-lg">ETH</span>
-						<button class="btn btn-secondary" type="button">BET</button>
+						<button class="btn btn-secondary" type="button" id="bet_button">BET</button>
 					</div>
 				</div>
 			</div>
